syntax = "proto3";

package v1.uspb;

import "v1/uspb/user.proto";

option go_package = "github.com/dj-yacine-flutter/gojo;uspbv1";

message CreateUserRequest {
  string username = 1;
  string fullName = 2;
  string email    = 3;
  string password = 4;
}

message CreateUserResponse {
  User user = 1;
}